<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Upload_prescription">


    <Button
        android:id="@+id/cammera"
        android:layout_width="111dp"
        android:layout_height="87dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/shape1"
        android:text="@string/uplodbtn1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/gallery"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gallery"
        android:layout_width="111dp"
        android:layout_height="87dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="11dp"
        android:background="@drawable/shape1"
        android:text="@string/uplodbtn2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/exist"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exist"
        android:layout_width="111dp"
        android:layout_height="87dp"
        android:layout_marginTop="27dp"

        android:layout_marginEnd="28dp"
        android:background="@drawable/shape1"


        android:text="@string/uplodbtn3"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="480dp"
        android:layout_height="180dp"
        android:layout_marginTop="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="115dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="224dp"
        android:text="@string/uplodtxt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/des_prescription"
        android:layout_width="346dp"
        android:layout_height="43dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/uplodtxt2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/request_quotation"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:text="@string/uplodbtn4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/des_prescription" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="192dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="188dp"
        android:text="Prescription Attaching By you"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cammera" />

    <Button
        android:id="@+id/deleteimg"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginTop="140dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />
</androidx.constraintlayout.widget.ConstraintLayout>