<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignUp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="226dp"
        android:layout_height="34dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="116dp"
        android:text="@string/Stxt1"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sfullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/Stxt2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/smobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:hint="@string/Stxt3"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/sfullname" />

    <EditText
        android:id="@+id/sdob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:hint="@string/Stxt4"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/date_select"
        app:layout_constraintTop_toBottomOf="@+id/smobile" />

    <EditText
        android:id="@+id/semail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:hint="@string/Stxt5"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/sdob" />

    <Button
        android:id="@+id/signup"
        android:layout_width="252dp"
        android:layout_height="47dp"
        android:layout_marginTop="64dp"
        android:text="@string/Sbtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spassword" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="61dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/ic_user_signup"
        tools:srcCompat="@drawable/ic_user_signup" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="61dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/ic_call_signup"
        tools:srcCompat="@drawable/ic_call_signup" />

    <Button
        android:id="@+id/date_select"
        android:layout_width="61dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_baseline_calendar_today_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="61dp"
        android:layout_height="55dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="47dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_select"
        app:srcCompat="@drawable/ic_mail_signup"
        tools:srcCompat="@drawable/ic_mail_signup" />

    <EditText
        android:id="@+id/spassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/semail" />

</androidx.constraintlayout.widget.ConstraintLayout>